--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,12 +1,12 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.4.2
+;version=0.4.3
 ;about='This package was designed for managing, converting, and installing mods.'
 ;color=#8e43f7
 
 [@Actions]
 
-[Manage]
+[Manage Mods]
 [*exeFS Patches?1]
 [*Toggle?1]
 ;mode=toggle
@@ -42,7 +42,22 @@ filter /atmosphere/exefs_patches/.offload/
 file_source /atmosphere/exefs_patches/*/
 delete {file_source}
 
-[Manage]
+[gap]
+;mode=table
+;background=false
+;gap=20
+
+[exefs info]
+;mode=table
+;background=false
+;alignment=left
+;offset=20
+;spacing=10
+
+''='Your installed IPS mods will show up here.'
+
+
+[Manage Mods]
 [*Contents Mods?1]
 [*Toggle?2]
 ;mode=toggle
@@ -67,8 +82,22 @@ file_source './contents/*/'
 mirror_delete {file_source} /atmosphere/contents/
 delete {file_source}
 
+[gap]
+;mode=table
+;background=false
+;gap=20
 
-[Manage]
+[contents info]
+;mode=table
+;background=false
+;alignment=left
+;offset=6
+;spacing=10
+
+'For managing content mods installed in'=''
+''='"/switch/.packages/Mod Alchemist/contents/"'
+
+[Manage Mods]
 [*Mod Groups]
 [*Search Pattern]
 ;mode=option
@@ -88,7 +117,9 @@ move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern",footer)}*/' /atmosp
 mirror_delete './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
 move './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' ./contents/
 
-[Convert]
+[Convert Mods]
+
+
 [*pchtxt -> ips]
 ;grouping=split2
 logging
@@ -101,6 +132,23 @@ pchtxt2ips "{file_source}" "/atmosphere/exefs_patches/{folder_name}/"
 logging
 file_source './pchtxts/*/*.pchtxt'
 pchtxt2cheat "{file_source}"
+
+[gap]
+;mode=table
+;background=false
+;gap=20
+
+[pchtxt info]
+;mode=table
+;background=false
+;alignment=left
+;offset=9
+;spacing=10
+
+'"/{GAME} - {MOD}/{VERSION}.pchtxt" go in'=''
+''='"/switch/.packages/Mod Alchemist/pchtxts/"'
+
+
 
 [@More]
 
