--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -113,8 +113,21 @@ mirror_delete './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' /atmo
 move './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' ./contents/
 
 
-[Convert Mods]
+[gap]
+;mode=table
+;background=false
+;gap=20
 
+[group info]
+;mode=table
+;background=false
+;alignment=left
+;offset=7
+;spacing=10
+''='Patterns can be added to "search_patterns.txt"'
+
+
+[Convert Mods]
 
 [*pchtxt -> ips]
 ;grouping=split2
@@ -145,21 +158,21 @@ pchtxt2cheat "{file_source}"
 
 [@More]
 
-[Mod Repos]
-
-[*Install pchtxt's]
-[*theboy181's Mods]
-;grouping=split4
-file_source /config/ultrahand/downloads/theboy181/switch-ptchtxt-mods-main/*/*/*/*.zip
-
-
-[*Download Bundles]
-[theboy181's Mods]
-mkdir /config/ultrahand/downloads/theboy181/
-delete /config/ultrahand/downloads/theboy181/main.zip
-download https://github.com/ppkantorski/switch-ptchtxt-mods/archive/refs/heads/main.zip /config/ultrahand/downloads/theboy181/
-unzip /config/ultrahand/downloads/theboy181/main.zip /config/ultrahand/downloads/theboy181/
-delete /config/ultrahand/downloads/theboy181/main.zip
+#[Mod Repos]
+#
+#[*Install pchtxt's]
+#[*theboy181's Mods]
+#;grouping=split4
+#file_source /config/ultrahand/downloads/theboy181/switch-ptchtxt-mods-main/*/*/*/*.zip
+#
+#
+#[*Download Bundles]
+#[theboy181's Mods]
+#mkdir /config/ultrahand/downloads/theboy181/
+#delete /config/ultrahand/downloads/theboy181/main.zip
+#download https://github.com/ppkantorski/switch-ptchtxt-mods/archive/refs/heads/main.zip /config/ultrahand/downloads/theboy181/
+#unzip /config/ultrahand/downloads/theboy181/main.zip /config/ultrahand/downloads/theboy181/
+#delete /config/ultrahand/downloads/theboy181/main.zip
 
 
 [Software Update]
