--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.4.3
+;version=0.4.4
 ;about='This package was designed for managing, converting, and installing mods.'
 ;color=#8e43f7
 
@@ -140,32 +140,49 @@ pchtxt2ips "{file_source}" "/atmosphere/exefs_patches/{folder_name}/"
 file_source './pchtxts/*/*.pchtxt'
 pchtxt2cheat "{file_source}"
 
-[gap]
-;mode=table
-;background=false
-;gap=20
+[*Delete pchtxt]
+;grouping=split2
+file_source './pchtxts/*/*.pchtxt'
+delete "{file_source}"
 
-[pchtxt info]
-;mode=table
-;background=false
-;alignment=left
-;offset=9
-;spacing=10
 
-'"/{GAME} - {MOD}/{VERSION}.pchtxt" go in'=''
-''='"/switch/.packages/Mod Alchemist/pchtxts/"'
+#[gap]
+#;mode=table
+#;background=false
+#;gap=20
+#
+#[pchtxt info]
+#;mode=table
+#;background=false
+#;alignment=left
+#;offset=9
+#;spacing=10
+#
+#'"/{GAME} - {MOD}/{VERSION}.pchtxt" go in'=''
+#''='"/switch/.packages/Mod Alchemist/pchtxts/"'
 
 
 [@More]
 
-#[Mod Repos]
-#
-#[*Install pchtxt's]
-#[*theboy181's Mods]
-#;grouping=split4
-#file_source /config/ultrahand/downloads/theboy181/switch-ptchtxt-mods-main/*/*/*/*.zip
-#
-#
+[Mod Repos]
+
+[*Install pchtxt's]
+[*Fl4sh9174's Mods]
+;grouping=split2
+file_source './repos/Fl4sh9174/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*StevensND's Mods]
+;grouping=split2
+file_source './repos/StevensND/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*KeatonTheBot's Mods]
+;grouping=split2
+file_source './repos/KeatonTheBot/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+
 #[*Download Bundles]
 #[theboy181's Mods]
 #mkdir /config/ultrahand/downloads/theboy181/
