--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -183,13 +183,15 @@ file_source './repos/KeatonTheBot/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
 
-#[*Download Bundles]
-#[theboy181's Mods]
-#mkdir /config/ultrahand/downloads/theboy181/
-#delete /config/ultrahand/downloads/theboy181/main.zip
-#download https://github.com/ppkantorski/switch-ptchtxt-mods/archive/refs/heads/main.zip /config/ultrahand/downloads/theboy181/
-#unzip /config/ultrahand/downloads/theboy181/main.zip /config/ultrahand/downloads/theboy181/
-#delete /config/ultrahand/downloads/theboy181/main.zip
+[*Extract Mods]
+[Fl4sh9174's Mods]
+unzip './repos/Fl4sh9174.zip' './repos/Fl4sh9174/'
+
+[StevensND's Mods]
+unzip './repos/StevensND.zip' './repos/StevensND/'
+
+[KeatonTheBot's Mods]
+unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
 
 
 [Software Update]
