--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -197,6 +197,15 @@ unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
 [Software Update]
 
 [Update Mod Alchemist]
-null
+try:
+download https://github.com/ppkantorski/Mod-Alchemist/archive/refs/heads/main.zip /config/ultrahand/downloads/mod_alchemist/
+unzip /config/ultrahand/downloads/mod_alchemist/main.zip /config/ultrahand/downloads/mod_alchemist/
+mv './pchtxts/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/pchtxts/'
+mv './contents/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/contents/'
+delete '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/search_patterns.txt'
+mv './search_patterns.txt' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/'
+mv './repos/*/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/repos/'
+delete './'
+mv '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/' './'
 
 [Package Info]
