--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -198,6 +198,8 @@ unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
 
 [Update Mod Alchemist]
 try:
+delete /config/ultrahand/downloads/mod_alchemist/
+mkdir /config/ultrahand/downloads/mod_alchemist/
 download https://github.com/ppkantorski/Mod-Alchemist/archive/refs/heads/main.zip /config/ultrahand/downloads/mod_alchemist/
 unzip /config/ultrahand/downloads/mod_alchemist/main.zip /config/ultrahand/downloads/mod_alchemist/
 mv './pchtxts/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/pchtxts/'
