--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -202,10 +202,7 @@ delete /config/ultrahand/downloads/mod_alchemist/
 mkdir /config/ultrahand/downloads/mod_alchemist/
 download https://github.com/ppkantorski/Mod-Alchemist/archive/refs/heads/main.zip /config/ultrahand/downloads/mod_alchemist/
 unzip /config/ultrahand/downloads/mod_alchemist/main.zip /config/ultrahand/downloads/mod_alchemist/
-mv './pchtxts/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/pchtxts/'
-mv './contents/' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/contents/'
 delete '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/search_patterns.txt'
-mv './search_patterns.txt' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/'
-mv '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/' './'
+mv '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/' ./
 
 [Package Info]
