--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -182,6 +182,23 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 file_source './repos/KeatonTheBot/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
+[gap]
+;mode=table
+;background=false
+;gap=40
+
+[*Search Pattern?repo]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
+
+[*Pattern Results]
+;grouping=split2
+ini_file './config.ini'
+file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+
 
 [*Extract Mods]
 [Fl4sh9174's Mods]
