--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.4.4
+;version=0.4.5
 ;about='This package was designed for managing, converting, and installing mods.'
 ;color=#8e43f7
 
@@ -172,15 +172,21 @@ delete "{file_source}"
 file_source './repos/Fl4sh9174/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
+[*KeatonTheBot's Mods]
+;grouping=split2
+file_source './repos/KeatonTheBot/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
 [*StevensND's Mods]
 ;grouping=split2
 file_source './repos/StevensND/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
-[*KeatonTheBot's Mods]
+[*theboy181's Mods]
 ;grouping=split2
-file_source './repos/KeatonTheBot/*/*.pchtxt'
+file_source './repos/theboy181/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
+
 
 [gap]
 ;mode=table
@@ -204,11 +210,14 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 [Fl4sh9174's Mods]
 unzip './repos/Fl4sh9174.zip' './repos/Fl4sh9174/'
 
+[KeatonTheBot's Mods]
+unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
+
 [StevensND's Mods]
 unzip './repos/StevensND.zip' './repos/StevensND/'
 
-[KeatonTheBot's Mods]
-unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
+[theboy181's Mods]
+unzip './repos/theboy181.zip' './repos/theboy181/'
 
 
 [Software Update]
