--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -2,7 +2,7 @@
 ;creator=ppkantorski
 ;version=0.4.5
 ;about='This package was designed for managing, converting, and installing mods.'
-;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, & theboy181.'
+;credits='Repos by Fl4sh9174, KeatonTheBot, StevensND, & theboy181.'
 ;color=#8e43f7
 
 [@Actions]
