--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -199,7 +199,7 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 list_file_source './search_patterns.txt'
 set-footer '{list_file_source(*)}'
 
-[*Pattern Results]
+[*Search Results]
 ;grouping=split2
 ini_file './config.ini'
 file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
