--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -95,7 +95,7 @@ delete {file_source}
 
 [Manage Mods]
 
-[*Mod Groups]
+[*Toggle Groups]
 [*Search Pattern]
 ;mode=option
 list_file_source './search_patterns.txt'
@@ -127,6 +127,12 @@ move './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' ./contents/
 ;spacing=10
 ''='Patterns can be added to "search_patterns.txt"'
 
+[Manage Mods]
+[*Delete pchtxt]
+;grouping=split2
+file_source './pchtxts/*/*.pchtxt'
+delete "{file_source}"
+
 
 [Convert Mods]
 
@@ -141,10 +147,8 @@ pchtxt2ips "{file_source}" "/atmosphere/exefs_patches/{folder_name}/"
 file_source './pchtxts/*/*.pchtxt'
 pchtxt2cheat "{file_source}"
 
-[*Delete pchtxt]
-;grouping=split2
-file_source './pchtxts/*/*.pchtxt'
-delete "{file_source}"
+
+
 
 
 #[gap]
@@ -167,7 +171,7 @@ delete "{file_source}"
 
 [Mod Repos]
 
-[*Install pchtxt's]
+[*Install pchtxt]
 [*Fl4sh9174's Mods]
 ;grouping=split2
 file_source './repos/Fl4sh9174/*/*.pchtxt'
@@ -207,7 +211,7 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 
 
 
-[*Extract Mods]
+[*Extract Repos]
 [Fl4sh9174's Mods]
 unzip './repos/Fl4sh9174.zip' './repos/Fl4sh9174/'
 
