--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -5,7 +5,7 @@
 ;credits='Fl4sh9174, KeatonTheBot, StevensND, theboy181'
 ;color=#8e43f7
 
-[@Actions]
+[@Main]
 
 [Manage Mods]
 
@@ -167,7 +167,7 @@ pchtxt2cheat "{file_source}"
 #''='"/switch/.packages/Mod Alchemist/pchtxts/"'
 
 
-[@More]
+[@Extra]
 
 [Mod Repos]
 
