--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -7,7 +7,7 @@
 
 [@Enhance]
 
-[Manage Mods]
+[Active Mods]
 
 [*exeFS Patches?1]
 [*Toggle?1]
@@ -53,7 +53,7 @@ delete {file_source}
 ;spacing=10
 ''='Your installed IPS mods will show up here.'
 
-[Manage Mods]
+[Active Mods]
 
 [*Contents Mods?1]
 [*Toggle?2]
@@ -93,7 +93,7 @@ delete {file_source}
 ''='"/switch/.packages/Mod Alchemist/contents/"'
 
 
-[Manage Mods]
+[Active Mods]
 
 [*Toggle Groups]
 [*Search Pattern]
@@ -127,11 +127,6 @@ move './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' ./contents/
 ;spacing=10
 ''='Patterns can be added to "search_patterns.txt"'
 
-[Manage Mods]
-[*Delete pchtxt]
-;grouping=split2
-file_source './pchtxts/*/*.pchtxt'
-delete "{file_source}"
 
 
 [Convert Mods]
@@ -148,6 +143,18 @@ file_source './pchtxts/*/*.pchtxt'
 pchtxt2cheat "{file_source}"
 
 
+
+
+#[gap]
+#;mode=table
+#;background=false
+#;gap=16
+
+
+[*Delete pchtxt]
+;grouping=split2
+file_source './pchtxts/*/*.pchtxt'
+delete "{file_source}"
 
 
 
