--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -36,7 +36,6 @@ filter /atmosphere/exefs_patches/nfim_ctest/
 filter /atmosphere/exefs_patches/vi_patches/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 file_source /atmosphere/exefs_patches/.offload/*/
-filter /atmosphere/exefs_patches/.offload/
 file_source /atmosphere/exefs_patches/*/
 delete {file_source}
 
@@ -96,10 +95,29 @@ delete {file_source}
 [Active Mods]
 
 [*Toggle Groups]
-[*Search Pattern]
+[*Search Pattern?active]
 ;mode=option
 list_file_source './search_patterns.txt'
 set-footer '{list_file_source(*)}'
+
+[*Search Results?active]
+;grouping=split2
+
+file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
+;mode=toggle
+;grouping=split3
+ini_file './config.ini'
+on:
+    filter /atmosphere/exefs_patches/.offload/
+    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?repo",footer)}*/
+    file_source './contents/.onload/*/*{ini_file("*Search Pattern?repo",footer)}*/'
+    mirror_delete {file_source} /atmosphere/contents/
+    move {file_source} './contents/{file_name}/'
+off:
+    filter './contents/.onload/'
+    file_source './contents/*/'
+    mirror_copy {file_source} /atmosphere/contents/
+    move {file_source} './contents/.onload/{file_name}/'
 
 [Enable All]
 ini_file './config.ini'
@@ -210,7 +228,7 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 list_file_source './search_patterns.txt'
 set-footer '{list_file_source(*)}'
 
-[*Search Results]
+[*Search Results?repo]
 ;grouping=split2
 ini_file './config.ini'
 file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
