--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.4.5
+;version=0.4.6
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Fl4sh9174, KeatonTheBot, StevensND, theboy181'
 ;color=#8e43f7
@@ -17,6 +17,8 @@ filter /atmosphere/exefs_patches/am/
 filter /atmosphere/exefs_patches/es_patches/
 filter /atmosphere/exefs_patches/nfim_ctest/
 filter /atmosphere/exefs_patches/vi_patches/
+filter /atmosphere/exefs_patches/btm_patches/
+filter /atmosphere/exefs_patches/bluetooth_patches/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 on:
     filter /atmosphere/exefs_patches/.offload/
@@ -34,6 +36,8 @@ filter /atmosphere/exefs_patches/am/
 filter /atmosphere/exefs_patches/es_patches/
 filter /atmosphere/exefs_patches/nfim_ctest/
 filter /atmosphere/exefs_patches/vi_patches/
+filter /atmosphere/exefs_patches/btm_patches/
+filter /atmosphere/exefs_patches/bluetooth_patches/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 file_source /atmosphere/exefs_patches/.offload/*/
 file_source /atmosphere/exefs_patches/*/
@@ -58,22 +62,22 @@ delete {file_source}
 [*Toggle?2]
 ;mode=toggle
 ;grouping=split3
+logging
 on:
-    file_source './contents/.onload/*/'
-    mirror_delete {file_source} /atmosphere/contents/
-    move {file_source} './contents/{file_name}/'
+    file_source './contents/.loaded/*/'
+    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt'
+    delete {file_source}
 off:
-    filter './contents/.onload/'
+    filter './contents/.loaded/'
     file_source './contents/*/'
-    mirror_copy {file_source} /atmosphere/contents/
-    move {file_source} './contents/.onload/{file_name}/'
+    move {file_source} '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
 
 
 [*Delete?2]
 ;grouping=split3
-file_source './contents/.onload/*/'
+file_source './contents/.loaded/*/'
 file_source './contents/*/'
-mirror_delete {file_source} /atmosphere/contents/
+delete -src {file_source}location_on.txt
 delete {file_source}
 
 [gap]
@@ -101,35 +105,33 @@ list_file_source './search_patterns.txt'
 set-footer '{list_file_source(*)}'
 
 [*Search Results?active]
-;grouping=split2
-
-file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
 ;mode=toggle
 ;grouping=split3
 ini_file './config.ini'
+file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
 on:
     filter /atmosphere/exefs_patches/.offload/
     file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?repo",footer)}*/
-    file_source './contents/.onload/*/*{ini_file("*Search Pattern?repo",footer)}*/'
+    file_source './contents/.loaded/*/*{ini_file("*Search Pattern?repo",footer)}*/'
     mirror_delete {file_source} /atmosphere/contents/
     move {file_source} './contents/{file_name}/'
 off:
-    filter './contents/.onload/'
+    filter './contents/.loaded/'
     file_source './contents/*/'
     mirror_copy {file_source} /atmosphere/contents/
-    move {file_source} './contents/.onload/{file_name}/'
+    move {file_source} './contents/.loaded/{file_name}/'
 
 [Enable All]
 ini_file './config.ini'
 move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/
 mirror_copy './contents/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
-move './contents/*{ini_file("*Search Pattern",footer)}*/' ./contents/.onload/
+move './contents/*{ini_file("*Search Pattern",footer)}*/' ./contents/.loaded/
 
 [Disable All]
 ini_file './config.ini'
 move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/.offload/
-mirror_delete './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
-move './contents/.onload/*{ini_file("*Search Pattern",footer)}*/' ./contents/
+mirror_delete './contents/.loaded/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
+move './contents/.loaded/*{ini_file("*Search Pattern",footer)}*/' ./contents/
 
 
 [gap]
