--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.4.6
+;version=0.4.7
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Fl4sh9174, KeatonTheBot, StevensND, theboy181'
 ;color=#8e43f7
@@ -62,9 +62,12 @@ delete {file_source}
 [*Toggle?2]
 ;mode=toggle
 ;grouping=split3
+
 on:
     file_source './contents/.loaded/*/'
-    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt'
+    delete '{file_source}duplicates.txt'
+    compare './contents/.loaded/{split({file_name}," - ",0)}*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
     delete {file_source}
 off:
     filter './contents/.loaded/'
