--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -24,10 +24,10 @@ on:
     filter /atmosphere/exefs_patches/.offload/
     file_source /atmosphere/exefs_patches/*/
     mkdir /atmosphere/exefs_patches/.offload/
-    move {file_source} /atmosphere/exefs_patches/.offload/{file_name}/
+    move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
 off:
     file_source /atmosphere/exefs_patches/.offload/*/
-    move {file_source} /atmosphere/exefs_patches/{file_name}/
+    move {file_source} '/atmosphere/exefs_patches/{file_name}/'
 
 
 [*Delete?1]
@@ -56,6 +56,59 @@ delete {file_source}
 ;spacing=10
 ''='Your installed IPS mods will show up here.'
 
+
+
+[Active Mods]
+
+[*exeFS Groups]
+[*Search Pattern?active]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
+
+[*Search Results?active]
+;mode=toggle
+;grouping=split3
+ini_file './config.ini'
+file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/''
+filter /atmosphere/exefs_patches/am/
+filter /atmosphere/exefs_patches/es_patches/
+filter /atmosphere/exefs_patches/nfim_ctest/
+filter /atmosphere/exefs_patches/vi_patches/
+filter /atmosphere/exefs_patches/btm_patches/
+filter /atmosphere/exefs_patches/bluetooth_patches/
+filter /atmosphere/exefs_patches/NxThemesInstaller/
+on:
+    filter /atmosphere/exefs_patches/.offload/
+    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?repo",footer)}*/
+    move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
+off:
+    file_source '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?repo",footer)}*/'
+    move {file_source} '/atmosphere/exefs_patches/{file_name}/'
+
+[Enable All]
+ini_file './config.ini'
+move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/
+
+[Disable All]
+ini_file './config.ini'
+move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/.offload/
+
+[gap]
+;mode=table
+;background=false
+;gap=20
+
+[group info]
+;mode=table
+;background=false
+;alignment=left
+;offset=7
+;spacing=10
+''='Patterns can be added to "search_patterns.txt"'
+
+
+
 [Active Mods]
 
 [*Contents Mods?1]
@@ -79,7 +132,8 @@ off:
 ;grouping=split3
 file_source './contents/.loaded/*/'
 file_source './contents/*/'
-delete -src {file_source}location_on.txt
+compare './contents/.loaded/{split({file_name}," - ",0)}*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
+delete -src '{file_source}location_on.txt' -filter '{file_source}duplicates.txt'
 delete {file_source}
 
 [gap]
@@ -96,58 +150,6 @@ delete {file_source}
 
 'For managing content mods installed in'=''
 ''='"/switch/.packages/Mod Alchemist/contents/"'
-
-
-[Active Mods]
-
-[*Toggle Groups]
-[*Search Pattern?active]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
-
-[*Search Results?active]
-;mode=toggle
-;grouping=split3
-ini_file './config.ini'
-file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
-on:
-    filter /atmosphere/exefs_patches/.offload/
-    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?repo",footer)}*/
-    file_source './contents/.loaded/*/*{ini_file("*Search Pattern?repo",footer)}*/'
-    mirror_delete {file_source} /atmosphere/contents/
-    move {file_source} './contents/{file_name}/'
-off:
-    filter './contents/.loaded/'
-    file_source './contents/*/'
-    mirror_copy {file_source} /atmosphere/contents/
-    move {file_source} './contents/.loaded/{file_name}/'
-
-[Enable All]
-ini_file './config.ini'
-move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/
-mirror_copy './contents/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
-move './contents/*{ini_file("*Search Pattern",footer)}*/' ./contents/.loaded/
-
-[Disable All]
-ini_file './config.ini'
-move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/.offload/
-mirror_delete './contents/.loaded/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/contents/
-move './contents/.loaded/*{ini_file("*Search Pattern",footer)}*/' ./contents/
-
-
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-[group info]
-;mode=table
-;background=false
-;alignment=left
-;offset=7
-;spacing=10
-''='Patterns can be added to "search_patterns.txt"'
 
 
 
