--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -80,10 +80,10 @@ filter /atmosphere/exefs_patches/bluetooth_patches/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 on:
     filter /atmosphere/exefs_patches/.offload/
-    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?repo",footer)}*/
+    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/
     move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
 off:
-    file_source '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?repo",footer)}*/'
+    file_source '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/'
     move {file_source} '/atmosphere/exefs_patches/{file_name}/'
 
 [Enable All]
