Update package.ini - cucholix mods

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,8 +1,8 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.0
+;version=0.5.1
 ;about='This package was designed for managing, converting, and installing mods.'
-;credits='Fl4sh9174, KeatonTheBot, StevensND, theboy181'
+;credits='Fl4sh9174, KeatonTheBot, StevensND, cucholix, theboy181'
 ;color=#8e43f7
 
 [@Enhance]
@@ -218,6 +218,11 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 file_source './repos/StevensND/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
+[*cucholix's Mods]
+;grouping=split2
+file_source './repos/cucholix/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
 [*theboy181's Mods]
 ;grouping=split2
 file_source './repos/theboy181/*/*.pchtxt'
@@ -251,6 +256,9 @@ unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
 
 [StevensND's Mods]
 unzip './repos/StevensND.zip' './repos/StevensND/'
+
+[cucholix's Mods]
+unzip './repos/cucholix.zip' './repos/cucholix/'
 
 [theboy181's Mods]
 unzip './repos/theboy181.zip' './repos/theboy181/'
