--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -264,7 +264,8 @@ unzip './repos/cucholix.zip' './repos/cucholix/'
 unzip './repos/theboy181.zip' './repos/theboy181/'
 
 
-[Software Update]
+[Tools]
+[*Software Update]
 
 [Update Mod Alchemist]
 try:
