--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,6 +1,6 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.1
+;version=0.5.2
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Fl4sh9174, KeatonTheBot, StevensND, cucholix, theboy181'
 ;color=#8e43f7
@@ -203,65 +203,107 @@ delete "{file_source}"
 [Mod Repos]
 
 [*Install pchtxt]
-[*Fl4sh9174's Mods]
-;grouping=split2
-file_source './repos/Fl4sh9174/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
+[*Search Pattern?pchtxt_repo]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
 
-[*KeatonTheBot's Mods]
+[*Search Results?pchtxt_repo]
 ;grouping=split2
-file_source './repos/KeatonTheBot/*/*.pchtxt'
+ini_file './config.ini'
+file_source './repos/pchtxts/*/*{ini_file("*Search Pattern?pchtxt_repo",footer)}*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*StevensND's Mods]
-;grouping=split2
-file_source './repos/StevensND/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*cucholix's Mods]
-;grouping=split2
-file_source './repos/cucholix/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*theboy181's Mods]
-;grouping=split2
-file_source './repos/theboy181/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
 
 [gap]
 ;mode=table
 ;background=false
 ;gap=10
 
-[*Search Pattern?repo]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
-
-[*Search Results?repo]
+[*Fl4sh9174's Mods]
 ;grouping=split2
-ini_file './config.ini'
-file_source './repos/*/*{ini_file("*Search Pattern?repo",footer)}*/*.pchtxt'
+file_source './repos/pchtxts/Fl4sh9174/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*KeatonTheBot's Mods]
+;grouping=split2
+file_source './repos/pchtxts/KeatonTheBot/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*StevensND's Mods]
+;grouping=split2
+file_source './repos/pchtxts/StevensND/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*cucholix's Mods]
+;grouping=split2
+file_source './repos/pchtxts/cucholix/*/*.pchtxt'
+cp "{file_source}" './pchtxts/{folder_name}/'
+
+[*theboy181's Mods]
+;grouping=split2
+file_source './repos/pchtxts/theboy181/*/*.pchtxt'
 cp "{file_source}" './pchtxts/{folder_name}/'
 
 
 
+
+[*Install contents]
+[*Search Pattern?contents_repo]
+;mode=option
+list_file_source './search_patterns.txt'
+set-footer '{list_file_source(*)}'
+
+[*Search Results?contents_repo]
+;grouping=split2
+ini_file './config.ini'
+file_source './repos/contents/*/*{ini_file("*Search Pattern?contents_repo",footer)}*/'
+cp "{file_source}" './contents/{folder_name}/'
+
+[gap]
+;mode=table
+;background=false
+;gap=10
+
+
+[*cucholix's Mods]
+;grouping=split2
+file_source './repos/contents/cucholix/*/*/'
+cp "{file_source}" './contents/{folder_name}/'
+
+
+
 [*Extract Repos]
+
+[Extract All]
+unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
+unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
+unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
+unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
+unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
+unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
+
+[gap]
+;mode=table
+;background=false
+;gap=10
+
+
 [Fl4sh9174's Mods]
-unzip './repos/Fl4sh9174.zip' './repos/Fl4sh9174/'
+unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
 
 [KeatonTheBot's Mods]
-unzip './repos/KeatonTheBot.zip' './repos/KeatonTheBot/'
+unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
 
 [StevensND's Mods]
-unzip './repos/StevensND.zip' './repos/StevensND/'
+unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
 
 [cucholix's Mods]
-unzip './repos/cucholix.zip' './repos/cucholix/'
+unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
+unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
 
 [theboy181's Mods]
-unzip './repos/theboy181.zip' './repos/theboy181/'
+unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
+
 
 
 [Tools]
