Update package.ini - filter tweak

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -22,6 +22,7 @@ on:
     filter /atmosphere/exefs_patches/vi_patches/
     filter /atmosphere/exefs_patches/btm_patches/
     filter /atmosphere/exefs_patches/bluetooth_patches/
+    filter /atmosphere/exefs_patches/nvnflinger_cmu/
     filter /atmosphere/exefs_patches/NxThemesInstaller/
     mkdir /atmosphere/exefs_patches/.offload/
     move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
@@ -40,6 +41,7 @@ filter /atmosphere/exefs_patches/nfim_ctest/
 filter /atmosphere/exefs_patches/vi_patches/
 filter /atmosphere/exefs_patches/btm_patches/
 filter /atmosphere/exefs_patches/bluetooth_patches/
+filter /atmosphere/exefs_patches/nvnflinger_cmu/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 delete {file_source}
 
