--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -249,7 +249,7 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 
 
 
-[*Install contents]
+[*Install Contents]
 [*Search Pattern?contents_repo]
 ;mode=option
 list_file_source './search_patterns.txt'
