Update package.ini - update software update command

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -313,11 +313,9 @@ unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
 
 [Update Mod Alchemist]
 try:
-delete /config/ultrahand/downloads/mod_alchemist/
-mkdir /config/ultrahand/downloads/mod_alchemist/
-download https://github.com/ppkantorski/Mod-Alchemist/archive/refs/heads/main.zip /config/ultrahand/downloads/mod_alchemist/
-unzip /config/ultrahand/downloads/mod_alchemist/main.zip /config/ultrahand/downloads/mod_alchemist/
-mv './search_patterns.txt' '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/search_patterns.txt'
-mv '/config/ultrahand/downloads/mod_alchemist/Mod-Alchemist-main/Mod Alchemist/' ./
+delete /config/ultrahand/downloads/Mod.Alchemist.zip
+download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
+unzip /config/ultrahand/downloads/mod_alchemist/Mod.Alchemist.zip /
+
 
 [Package Info]
