--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -316,6 +316,6 @@ try:
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
 download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
 unzip /config/ultrahand/downloads/Mod.Alchemist.zip /
-
+delete /config/ultrahand/downloads/Mod.Alchemist.zip
 
 [Package Info]
