Update package.ini - exefs Groups bug fix

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -90,11 +90,11 @@ off:
 
 [Enable All]
 ini_file './config.ini'
-move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/
+move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/' /atmosphere/exefs_patches/
 
 [Disable All]
 ini_file './config.ini'
-move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern",footer)}*/' /atmosphere/exefs_patches/.offload/
+move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/' /atmosphere/exefs_patches/.offload/
 
 [gap]
 ;mode=table
