--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -72,7 +72,7 @@ set-footer '{list_file_source(*)}'
 ;mode=toggle
 ;grouping=split3
 ini_file './config.ini'
-file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/''
+file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/'
 filter /atmosphere/exefs_patches/am/
 filter /atmosphere/exefs_patches/es_patches/
 filter /atmosphere/exefs_patches/nfim_ctest/
@@ -82,7 +82,7 @@ filter /atmosphere/exefs_patches/bluetooth_patches/
 filter /atmosphere/exefs_patches/NxThemesInstaller/
 on:
     filter /atmosphere/exefs_patches/.offload/
-    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/
+    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/'
     move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
 off:
     file_source '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/'
