--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -2,7 +2,7 @@
 ;creator=ppkantorski
 ;version=0.5.2
 ;about='This package was designed for managing, converting, and installing mods.'
-;credits='Fl4sh9174, KeatonTheBot, StevensND, cucholix, theboy181'
+;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, cucholix and theboy181.'
 ;color=#8e43f7
 
 [@Enhance]
