Update package.ini - title id implementation (requires Ultrahand 1.8.6)

--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -1,15 +1,37 @@
 ;title='Mod Alchemist'
 ;creator=ppkantorski
-;version=0.5.2
+;version=0.5.3
 ;about='This package was designed for managing, converting, and installing mods.'
 ;credits='Special thanks to Fl4sh9174, KeatonTheBot, StevensND, cucholix and theboy181.'
 ;color=#8e43f7
 
 [@Enhance]
 
-[Active Mods]
+[Manage Mods]
 
 [*exeFS Patches?1]
+
+[*Active?1]
+;mode=toggle
+;grouping=split5
+on:
+    file_source '/atmosphere/exefs_patches/*/{title_id}'
+    filter /atmosphere/exefs_patches/.offload/
+    filter /atmosphere/exefs_patches/am/
+    filter /atmosphere/exefs_patches/es_patches/
+    filter /atmosphere/exefs_patches/nfim_ctest/
+    filter /atmosphere/exefs_patches/vi_patches/
+    filter /atmosphere/exefs_patches/btm_patches/
+    filter /atmosphere/exefs_patches/bluetooth_patches/
+    filter /atmosphere/exefs_patches/nvnflinger_cmu/
+    filter /atmosphere/exefs_patches/NxThemesInstaller/
+    mkdir /atmosphere/exefs_patches/.offload/
+    move '/atmosphere/exefs_patches/{folder_name}/' '/atmosphere/exefs_patches/.offload/{folder_name}/'
+off:
+    file_source '/atmosphere/exefs_patches/.offload/*/{title_id}'
+    move '/atmosphere/exefs_patches/.offload/{folder_name}/' '/atmosphere/exefs_patches/{folder_name}/'
+
+
 [*Toggle?1]
 ;mode=toggle
 ;grouping=split3
@@ -60,7 +82,7 @@ delete {file_source}
 
 
 
-[Active Mods]
+[Manage Mods]
 
 [*exeFS Groups]
 [*Search Pattern?active]
@@ -89,6 +111,7 @@ off:
     move {file_source} '/atmosphere/exefs_patches/{file_name}/'
 
 [Enable All]
+logging
 ini_file './config.ini'
 move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/' /atmosphere/exefs_patches/
 
@@ -111,23 +134,44 @@ move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/' 
 
 
 
-[Active Mods]
+[Manage Mods]
 
 [*Contents Mods?1]
+
+[*Active?2]
+;mode=toggle
+;grouping=split5
+on:
+    file_source './contents/.loaded/*/{title_id}/'
+    delete {file_source}
+    delete './contents/.loaded/{folder_name}/duplicates.txt'
+    compare './contents/.loaded/{split({folder_name}," - ",0)}*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
+    move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
+    delete './contents/.loaded/{folder_name}/'
+off:
+    file_source './contents/*/{title_id}/'
+    filter './contents/.loaded/*/'
+    move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
+    mkdir ./contents/.loaded/{folder_name}/{file_name}/
+
+
+
 [*Toggle?2]
 ;mode=toggle
-;grouping=split3
-
+;grouping=split5
 on:
-    file_source './contents/.loaded/*/'
-    delete '{file_source}duplicates.txt'
-    compare './contents/.loaded/{split({file_name}," - ",0)}*/location_on.txt' '{file_source}location_on.txt' '{file_source}duplicates.txt'
-    move -src '{file_source}location_on.txt' -dest '{file_source}location_off.txt' -copy_filter '{file_source}duplicates.txt'
+    file_source './contents/.loaded/*/*/'
     delete {file_source}
+    delete './contents/.loaded/{folder_name}/duplicates.txt'
+    compare './contents/.loaded/{split({folder_name}," - ",0)}*/location_on.txt' './contents/.loaded/{folder_name}/location_on.txt' './contents/.loaded/{folder_name}/duplicates.txt'
+    move -src './contents/.loaded/{folder_name}/location_on.txt' -dest './contents/.loaded/{folder_name}/location_off.txt' -copy_filter './contents/.loaded/{folder_name}/duplicates.txt'
+    delete './contents/.loaded/{folder_name}/'
 off:
-    filter './contents/.loaded/'
-    file_source './contents/*/'
-    move {file_source} '/atmosphere/contents/' -log_src './contents/.loaded/{file_name}/location_off.txt' -log_dest './contents/.loaded/{file_name}/location_on.txt'
+    file_source './contents/*/*/'
+    filter './contents/.loaded/*/'
+    move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
+    mkdir ./contents/.loaded/{folder_name}/{file_name}/
+
 
 
 [*Delete?2]
