--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -7,134 +7,21 @@
 
 [@Enhance]
 
-[Manage Mods]
-
-[*exeFS Patches?1]
-
-[*Active?1]
-;mode=toggle
-;grouping=split5
-on:
-    file_source '/atmosphere/exefs_patches/*/{title_id}'
-    filter /atmosphere/exefs_patches/.offload/
-    filter /atmosphere/exefs_patches/am/
-    filter /atmosphere/exefs_patches/es_patches/
-    filter /atmosphere/exefs_patches/nfim_ctest/
-    filter /atmosphere/exefs_patches/vi_patches/
-    filter /atmosphere/exefs_patches/btm_patches/
-    filter /atmosphere/exefs_patches/bluetooth_patches/
-    filter /atmosphere/exefs_patches/nvnflinger_cmu/
-    filter /atmosphere/exefs_patches/NxThemesInstaller/
-    mkdir /atmosphere/exefs_patches/.offload/
-    move '/atmosphere/exefs_patches/{folder_name}/' '/atmosphere/exefs_patches/.offload/{folder_name}/'
-off:
-    file_source '/atmosphere/exefs_patches/.offload/*/{title_id}'
-    move '/atmosphere/exefs_patches/.offload/{folder_name}/' '/atmosphere/exefs_patches/{folder_name}/'
-
-
-[*Toggle?1]
-;mode=toggle
-;grouping=split3
-on:
-    file_source /atmosphere/exefs_patches/*/
-    filter /atmosphere/exefs_patches/.offload/
-    filter /atmosphere/exefs_patches/am/
-    filter /atmosphere/exefs_patches/es_patches/
-    filter /atmosphere/exefs_patches/nfim_ctest/
-    filter /atmosphere/exefs_patches/vi_patches/
-    filter /atmosphere/exefs_patches/btm_patches/
-    filter /atmosphere/exefs_patches/bluetooth_patches/
-    filter /atmosphere/exefs_patches/nvnflinger_cmu/
-    filter /atmosphere/exefs_patches/NxThemesInstaller/
-    mkdir /atmosphere/exefs_patches/.offload/
-    move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
-off:
-    file_source /atmosphere/exefs_patches/.offload/*/
-    move {file_source} '/atmosphere/exefs_patches/{file_name}/'
-
-
-[*Delete?1]
-;grouping=split3
-file_source /atmosphere/exefs_patches/.offload/*/
-file_source /atmosphere/exefs_patches/*/
-filter /atmosphere/exefs_patches/am/
-filter /atmosphere/exefs_patches/es_patches/
-filter /atmosphere/exefs_patches/nfim_ctest/
-filter /atmosphere/exefs_patches/vi_patches/
-filter /atmosphere/exefs_patches/btm_patches/
-filter /atmosphere/exefs_patches/bluetooth_patches/
-filter /atmosphere/exefs_patches/nvnflinger_cmu/
-filter /atmosphere/exefs_patches/NxThemesInstaller/
-delete {file_source}
-
 [gap]
 ;mode=table
 ;background=false
 ;gap=20
 
-[exefs info]
+[Title ID]
 ;mode=table
-;background=false
-;alignment=left
-;offset=20
-;spacing=10
-''='Your installed IPS mods will show up here.'
-
-
+'Program ID'='{title_id}'
 
 [Manage Mods]
 
-[*exeFS Groups]
-[*Search Pattern?active]
-;mode=option
-list_file_source './search_patterns.txt'
-set-footer '{list_file_source(*)}'
+[*exeFS Patches]
+;mode=forwarder
+package_source ./exefs_patches.ini
 
-[*Search Results?active]
-;mode=toggle
-;grouping=split3
-ini_file './config.ini'
-file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/'
-filter /atmosphere/exefs_patches/am/
-filter /atmosphere/exefs_patches/es_patches/
-filter /atmosphere/exefs_patches/nfim_ctest/
-filter /atmosphere/exefs_patches/vi_patches/
-filter /atmosphere/exefs_patches/btm_patches/
-filter /atmosphere/exefs_patches/bluetooth_patches/
-filter /atmosphere/exefs_patches/NxThemesInstaller/
-on:
-    filter /atmosphere/exefs_patches/.offload/
-    file_source '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/'
-    move {file_source} '/atmosphere/exefs_patches/.offload/{file_name}/'
-off:
-    file_source '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/'
-    move {file_source} '/atmosphere/exefs_patches/{file_name}/'
-
-[Enable All]
-logging
-ini_file './config.ini'
-move '/atmosphere/exefs_patches/.offload/*{ini_file("*Search Pattern?active",footer)}*/' /atmosphere/exefs_patches/
-
-[Disable All]
-ini_file './config.ini'
-move '/atmosphere/exefs_patches/*{ini_file("*Search Pattern?active",footer)}*/' /atmosphere/exefs_patches/.offload/
-
-[gap]
-;mode=table
-;background=false
-;gap=20
-
-[group info]
-;mode=table
-;background=false
-;alignment=left
-;offset=7
-;spacing=10
-''='Patterns can be added to "search_patterns.txt"'
-
-
-
-[Manage Mods]
 
 [*Contents Mods?1]
 
@@ -154,7 +41,10 @@ off:
     move './contents/{folder_name}/' '/atmosphere/contents/' -log_src './contents/.loaded/{folder_name}/location_off.txt' -log_dest './contents/.loaded/{folder_name}/location_on.txt'
     mkdir ./contents/.loaded/{folder_name}/{file_name}/
 
-
+[gap]
+;mode=table
+;background=false
+;gap=20
 
 [*Toggle?2]
 ;mode=toggle
@@ -201,13 +91,13 @@ delete {file_source}
 
 [Convert Mods]
 
-[*pchtxt -> ips]
+[*pchtxt  ips]
 ;grouping=split2
 file_source './pchtxts/*/*.pchtxt'
 mkdir "/atmosphere/exefs_patches/{folder_name}/"
 pchtxt2ips "{file_source}" "/atmosphere/exefs_patches/{folder_name}/"
 
-[*pchtxt -> cheat]
+[*pchtxt  cheat]
 ;grouping=split2
 file_source './pchtxts/*/*.pchtxt'
 pchtxt2cheat "{file_source}"
@@ -265,31 +155,9 @@ cp "{file_source}" './pchtxts/{folder_name}/'
 ;background=false
 ;gap=10
 
-[*Fl4sh9174's Mods]
-;grouping=split2
-file_source './repos/pchtxts/Fl4sh9174/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*KeatonTheBot's Mods]
-;grouping=split2
-file_source './repos/pchtxts/KeatonTheBot/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*StevensND's Mods]
-;grouping=split2
-file_source './repos/pchtxts/StevensND/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*cucholix's Mods]
-;grouping=split2
-file_source './repos/pchtxts/cucholix/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
-[*theboy181's Mods]
-;grouping=split2
-file_source './repos/pchtxts/theboy181/*/*.pchtxt'
-cp "{file_source}" './pchtxts/{folder_name}/'
-
+[*Repos?1]
+;mode=forwarder
+package_source ./pchtxt_repos.ini
 
 
 
@@ -311,10 +179,10 @@ cp "{file_source}" './contents/{folder_name}/'
 ;gap=10
 
 
-[*cucholix's Mods]
-;grouping=split2
-file_source './repos/contents/cucholix/*/*/'
-cp "{file_source}" './contents/{folder_name}/'
+[*Repos?2]
+;mode=forwarder
+package_source ./contents_repos.ini
+
 
 
 
@@ -325,8 +193,9 @@ unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
 unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
 unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
 unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
-unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
 unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
+
+unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
 
 [gap]
 ;mode=table
@@ -361,5 +230,29 @@ delete /config/ultrahand/downloads/Mod.Alchemist.zip
 download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
 unzip /config/ultrahand/downloads/Mod.Alchemist.zip /
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
+
+[Update Repos + Extract]
+logging
+delete './repos/pchtxts/Fl4sh9174.zip'
+delete './repos/pchtxts/KeatonTheBot.zip'
+delete './repos/pchtxts/StevensND.zip'
+delete './repos/pchtxts/cucholix.zip'
+delete './repos/pchtxts/theboy181.zip'
+delete './repos/contents/cucholix.zip'
+
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/Fl4sh9174.zip  ./repos/pchtxts/
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/KeatonTheBot.zip ./repos/pchtxts/
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/StevensND.zip ./repos/pchtxts/
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/cucholix.zip ./repos/pchtxts/
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/theboy181.zip ./repos/pchtxts/
+download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/contents/cucholix.zip ./repos/contents/
+
+unzip './repos/pchtxts/Fl4sh9174.zip' './repos/pchtxts/Fl4sh9174/'
+unzip './repos/pchtxts/KeatonTheBot.zip' './repos/pchtxts/KeatonTheBot/'
+unzip './repos/pchtxts/StevensND.zip' './repos/pchtxts/StevensND/'
+unzip './repos/pchtxts/cucholix.zip' './repos/pchtxts/cucholix/'
+unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
+
+unzip './repos/contents/cucholix.zip' './repos/contents/cucholix/'
 
 [Package Info]
