--- a/Mod Alchemist/package.ini
+++ b/Mod Alchemist/package.ini
@@ -228,16 +228,18 @@ unzip './repos/pchtxts/theboy181.zip' './repos/pchtxts/theboy181/'
 try:
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
 download http://github.com/ppkantorski/Mod-Alchemist/releases/latest/download/Mod.Alchemist.zip /config/ultrahand/downloads/
+delete './repos/pchtxts/*.zip'
+delete './repos/contents/*.zip'
+delete './repos/pchtxts/*/'
+delete './repos/contents/*/'
 unzip /config/ultrahand/downloads/Mod.Alchemist.zip /
 delete /config/ultrahand/downloads/Mod.Alchemist.zip
 
 [Update Repos + Extract]
-delete './repos/pchtxts/Fl4sh9174.zip'
-delete './repos/pchtxts/KeatonTheBot.zip'
-delete './repos/pchtxts/StevensND.zip'
-delete './repos/pchtxts/cucholix.zip'
-delete './repos/pchtxts/theboy181.zip'
-delete './repos/contents/cucholix.zip'
+delete './repos/pchtxts/*.zip'
+delete './repos/contents/*.zip'
+delete './repos/pchtxts/*/'
+delete './repos/contents/*/'
 
 download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/Fl4sh9174.zip  ./repos/pchtxts/
 download https://github.com/ppkantorski/Mod-Alchemist/raw/refs/heads/main/Mod%20Alchemist/repos/pchtxts/KeatonTheBot.zip ./repos/pchtxts/
